--- a/app/index.html
+++ b/app/index.html
@@ -8,13 +8,13 @@
   <meta name="description" content="">
   <meta name="viewport" content="initial-scale=1" />
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,700'>
-  <link rel="stylesheet" href="../node_modules/angular-material/angular-material.css" />
+  <link rel="stylesheet" href="./libs/angular-material.min.css" />
   <link rel="stylesheet" href="assets/app.css" />
 </head>
 
 <body ng-app="testApp" layout="column" ng-controller="MainController as vm" ng-cloak>
   <md-toolbar layout="row">
-    <md-button class="menu" hide-gt-sm ng-click="vm.toggleList()" aria-label="Show side navigation">
+    <md-button class="menu" ng-click="vm.toggleList()" aria-label="Show side navigation">
       <md-icon md-svg-icon="menu"></md-icon>
     </md-button>
     <h1>Admin console</h1>
@@ -79,20 +79,17 @@
     </md-content>
   </div>
 
-  <!--<a ui-sref="state1">State 1</a>
-  <a ui-sref="state2">State 2</a>-->
+  <script src="./libs/angular.min.js"></script>
+  <script src="./libs/angular-animate.min.js"></script>
+  <script src="./libs/angular-aria.min.js"></script>
+  <script src="./libs/angular-material.min.js"></script>
+  <script src="./libs/angular-ui-router.min.js"></script>
 
-  <script src="../node_modules/angular/angular.js"></script>
-  <script src="../node_modules/angular-animate/angular-animate.js"></script>
-  <script src="../node_modules/angular-aria/angular-aria.js"></script>
-  <script src="../node_modules/angular-material/angular-material.js"></script>
-  <script src="../node_modules/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="./src/users/users.module.js"></script>
   <script src="./src/users/users.service.js"></script>
   <script src="./src/login/login-form.controller.js"></script>
   <script src="./src/main.controller.js"></script>
   <script src="./src/users/users.controller.js"></script>
-
   <script src="./src/app.js"></script>
 
 </body>
