--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,7 @@
   <script src="./libs/angular-aria.min.js"></script>
   <script src="./libs/angular-material.min.js"></script>
   <script src="./libs/angular-ui-router.min.js"></script>
+  <script src="./libs/angular-messages.min.js"></script>
   <script src="./libs/md-data-table.min.js"></script>
   
 
@@ -36,6 +37,7 @@
   <script src="./src/users/users.service.js"></script>
   <script src="./src/login/login-form.controller.js"></script>
   <script src="./src/users/users.controller.js"></script>
+  <script src="./src/users/create-user.controller.js"></script>
   <script src="./src/orders/orders.module.js"></script>
   <script src="./src/orders/orders.controller.js"></script>
   <script src="./src/main/main-toolbar.directive.js"></script>
